# r-lawyer

./: Cargo.toml  Dioxus.toml  LICENSE_MIT  README.md
assets/: main.css  tailwind.css
src/: main.rs
src/backend/: get_server_data.rs  launch_server.rs  mod.rs
src/components/: mod.rs  rlawyer.rs
