[package]
name = "r-lawyer"
version = "0.1.0"
authors = ["marceldus <marcel@keienb.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.9", optional = true }
dioxus = { version = "0.6.0", features = ["fullstack"] }
dotenvy = { version = "0.15.7", optional = true }
sqlx = { version = "0.8.6", optional = true, features = ["chrono", "macros", "mysql", "runtime-tokio", "tls-native-tls"] }
tokio = { version = "1.45.1", features = ["full"], optional = true }

[features]
default = []
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:dotenvy", "dep:axum", "dep:tokio", "dep:sqlx"]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
